objects/ManuClub_Offer_List__c/ManuClub_Offer_List__c.object-meta.xml
<CustomObject>
    <label>ManuClub_Offer_List</label>
    <nameField>
        <displayFormat>MCOL-{0000000000}</displayFormat>
        <label>ManuClub_Offer_List ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ManuClub_Offer_List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>