objects/ManuClub_Offer_List__c/fields/Funct__c.field-meta.xml
<CustomField>
    <fullName>Funct__c</fullName>
    <label>Funct</label>
    <length>255</length>
    <type>Text</type>
</CustomField>