objects/ManuClub_Offer_List__c/fields/Image_URL_EN__c.field-meta.xml
<CustomField>
    <fullName>Image_URL_EN__c</fullName>
    <label>Image_URL_EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>