objects/ManuClub_Offer_List__c/fields/Img_Link_ID__c.field-meta.xml
<CustomField>
    <fullName>Img_Link_ID__c</fullName>
    <externalId>true</externalId>
    <label>Img_Link_ID</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>