objects/ManuClub_Offer_List__c/fields/Link_URL_CH__c.field-meta.xml
<CustomField>
    <fullName>Link_URL_CH__c</fullName>
    <label>Link_URL_CH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>