objects/ManuClub_Offer_List__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start_Date</label>
    <type>DateTime</type>
</CustomField>